# Balanced_k-Means_Revisited

./: README.md  SoftBKmeans.sln  _readme.txt
SoftBKmeans/: CMakeLists.txt  Makefile  SoftBKmeans.vcxproj  SoftBKmeans.vcxproj.filters  cluster.cpp  cluster.h  coordinate.cpp  coordinate.h  gnuplot.h  kMeans.cpp  kMeans.h  lib_api.hpp  main.cpp  point.cpp  point.h  py_example.py  py_interf.cpp  setup.py  sources.cpp
SoftBKmeans/computationConvexHull/: _.txt
SoftBKmeans/contrib/argtable/: README.md
SoftBKmeans/contrib/argtable/examples/: CMakeLists.txt
SoftBKmeans/contrib/argtable/tests/: CMakeLists.txt  testargfile.c  testarghashtable.c
SoftBKmeans/convexHulls/: _.txt
SoftBKmeans/data/: A1.txt  A2.txt  A3.txt  S1.txt  S2.txt  S3.txt  S4.txt  dim32.txt  ionosphere.txt  iris.txt  libra.txt  thyroid.txt  unbalance.txt  user.txt  vowel.txt  wine.txt
SoftBKmeans/datasets/: A1_2_3000_20.txt  Birch1_2_100000_100.txt  S2_2_5000_15.txt  S3_2_5000_15.txt  S4_2_5000_15.txt  Unbalance_2_6500_8.txt  Wine_13_178_3.txt  a1-gt.pa  a1-gt.txt  a1.txt  a2-gt.pa  a2-gt.txt  a2.txt  a3-gt.pa  a3.txt  birch1-gt.pa  birch1-gt.txt  birch1.txt  birch2-gt.pa  birch2-gt.txt  birch2.txt  dim32-gt.pa  dim32.txt  features-gt.pa  features.txt  ionosphere-gt.pa  ionosphere.txt  ionosphere_34_351_2.txt  iris-gt.pa  iris.txt  libra-gt.pa  libra.txt  libra_90_360_15.txt  s1-gt.pa  s1.txt  s2-gt.pa  s2.txt  s3-gt.pa  s3.txt  s4-gt.pa  (+13 more)
SoftBKmeans/results/: _.txt
